task1/test_results_defects/infer_test/double_lock/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/double_lock.c:222: error: Dead Store
  The value written to &rc (type int) is never used.
  220. #if ! defined(CHECKER_POLYSPACE)
  221. 	   pthread_t th1,th2;
  222. 	   int rc = 1;
           ^
  223. 	   long int t1 = 10;
  224. 	   long int t2 = 20;

Found 1 issue
  Issue Type(ISSUED_TYPE_ID): #
      Dead Store(DEAD_STORE): 1
